2004/03/22  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* ecore.cs : now it gets the correct list of namespaces in scope (either imported or current) Almost there for Bug #52067 

2004-03-22 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: One more negative scenario is addressed in const grammar

2004-03-22 Anirban Bhattacharjee <banirban@novell.com>
	* const.cs: Change type of constant to the type of its value if no explicit type declaration found

2004-03-22 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Grammar for declaring constant inside block is changed

2004-03-22 Anirban Bhattacharjee <banirban@novell.com>
	* const.cs: Changed exception numbers

2004-03-22 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Changed grammar for constant

2004/03/02  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* mb-tokenizer.cs : handling better linebreak, specially when delaing with literals and preprocessing directives 

2004-03-16 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: 
		- changed variable declaration grammar and added support for multiple variables declartion under single type e.g. dim x, y as integer
		- added few exception checks in variables
		- added one exception check in property
	
2004/03/02  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* sourcebeingcompiled.cs : new source/class to hold things previously contained in namespaces.cs 
			because in C# they were semantically tied to nested namespaces, and in VB.NET 
			they can occur only once per file.
	* mbas.exe.sources: added sourcebeingcompiled.cs
	* mb-parser.jay: reference RootContext.Sourcebeingcompiled things
	* namespace.cs: move pieces to sourcebeingcompiled
	* rootcontext.cs: use SourceBeingCompiled class
	* decl.cs: reference RootContext.Sourcebeingcompiled things

2004-03-02 Anirban Bhattacharjee <banirban@novell.com>
	* mb-tokenizer.cs: Support for '-' delimiter in DateTime

2004-03-02 Anirban Bhattacharjee <banirban@novell.com>