@@ -1,3 +1,6 @@
+2004-03-23 Anirban Bhattacharjee <banirban@novell.com>
+	* modifiers.cs: Return name of the modifiers' changed to vb specific
+
 2004/03/22  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
 	* ecore.cs : now it gets the correct list of namespaces in scope (either imported or current) Almost there for Bug #52067 
 
